--- a/code/MoodSync/app/src/main/res/layout/get_started_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/get_started_fragment.xml
@@ -1,92 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:background="#203434"
     tools:context=".SecondFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <!-- Centered Image -->
+    <!-- Adjust vertical bias as needed -->
+
+    <ImageView
+        android:id="@+id/centered_image"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:contentDescription="Centered Image"
+        android:src="@drawable/main_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.102" />
+
+
+    <TextView
+        android:id="@+id/welcome_to_"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#203434"
-        android:paddingBottom="32dp">
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:lineSpacingExtra="-10sp"
+        android:text="@string/welcome_to_"
+        android:textAppearance="@style/welcome_to_"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/centered_image" />
 
-        <RelativeLayout
-            android:id="@+id/social_media"
-            android:layout_width="333dp"
-            android:layout_height="333dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="32dp" />
-        <!-- Centered Image -->
-        <ImageView
-            android:id="@+id/centered_image"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:src="@drawable/main_icon"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_marginTop="90dp"
-            android:layout_marginStart="70dp"
-            android:contentDescription="Centered Image" />
+    <TextView
+        android:id="@+id/share_your_"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:lineSpacingExtra="14sp"
+        android:text="@string/share_your_"
+        android:textAppearance="@style/share_your_"
+        android:textColor="@color/white"
+        android:textSize="22dp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_to_" />
 
-        <TextView
-            android:id="@+id/welcome_to_"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/social_media"
-            android:layout_marginTop="32dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:lineSpacingExtra="-13sp"
-            android:text="@string/welcome_to_"
-            android:textAppearance="@style/welcome_to_" />
+    <Button
+        android:id="@+id/loginButton"
+        android:layout_width="224dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/rounded_text"
+        android:text="Login"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        app:backgroundTint="#9ca49c"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/share_your_" />
 
-        <TextView
-            android:id="@+id/share_your_"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/welcome_to_"
-            android:layout_marginTop="84dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="25dp"
-            android:lineSpacingExtra="14sp"
-            android:text="@string/share_your_"
-            android:textAppearance="@style/share_your_" />
+    <Button
+        android:id="@+id/button"
+        android:layout_width="224dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_text"
+        android:text="Register"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        app:backgroundTint="#9ca49c"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
-        <Button
-            android:id="@+id/loginButton"
-            android:layout_width="224dp"
-            android:layout_height="56dp"
-            android:layout_below="@id/share_your_"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="122dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="128dp"
-            android:text="Login"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            app:backgroundTint="#9ca49c"
-            android:background="@drawable/rounded_text" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="224dp"
-            android:layout_height="56dp"
-            android:layout_below="@id/share_your_"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="122dp"
-            android:layout_marginTop="130dp"
-            android:layout_marginEnd="128dp"
-            android:text="Register"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            app:backgroundTint="#9ca49c"
-            android:background="@drawable/rounded_text"/>
-
-    </RelativeLayout>
-
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
