--- a/code/MoodSync/app/src/main/res/layout/home_page_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/home_page_fragment.xml
@@ -29,7 +29,7 @@
             android:paddingStart="16dp"
             android:paddingTop="8dp"
             android:paddingEnd="8dp"
-            android:paddingBottom="8dp">
+            android:paddingBottom="0dp">
 
             <ImageView
                 android:id="@+id/filter_icon"
@@ -81,14 +81,14 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
     <!-- RecyclerView for Mood Event Cards -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mood_recycler_view"
-        android:layout_width="407dp"
-        android:layout_height="534dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
         android:clipToPadding="false"
-        android:paddingTop="12dp"
+        android:paddingTop="0dp"
         android:paddingBottom="12dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav_container"
         app:layout_constraintEnd_toEndOf="parent"
