--- a/code/MoodSync/app/src/main/res/layout/photo_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/photo_item.xml
@@ -10,13 +10,13 @@
 
     <ImageView
         android:id="@+id/photo_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:layout_width="141dp"
+        android:layout_height="130dp"
+        android:scaleType="centerCrop" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/image_overlay"/>
+        android:background="@drawable/image_overlay" />
 
 </androidx.cardview.widget.CardView>
