--- a/code/MoodSync/app/src/main/res/layout/edit_mood_fragment2.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_mood_fragment2.xml
@@ -17,18 +17,18 @@
         android:textSize="22sp"
         android:textStyle="bold" />
 
-    <ImageButton
-        android:id="@+id/back_Button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="28dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="Back"
-        android:src="@drawable/arrow_back"
-        app:tint="#FFFFFF" />
+<!--    <ImageButton-->
+<!--        android:id="@+id/back_Button"-->
+<!--        android:layout_width="48dp"-->
+<!--        android:layout_height="48dp"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_marginStart="18dp"-->
+<!--        android:layout_marginTop="28dp"-->
+<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
+<!--        android:contentDescription="Back"-->
+<!--        android:src="@drawable/arrow_back"-->
+<!--        app:tint="#FFFFFF" />-->
 
     <TextView
         android:id="@+id/stepIndicator"
