--- a/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
+++ b/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
@@ -284,6 +284,9 @@
         <action
             android:id="@+id/action_editProfileFragment_to_loginfragment"
             app:destination="@id/LoginFragment" />
+        <action
+            android:id="@+id/action_editProfileFragment_to_activity"
+            app:destination="@id/editProfileActivity" />
     </fragment>
 
 
